# polyA

./: .gitignore  AUTHORS  Dockerfile  Dockerfile_conda  Dockerfile_esl_scorematrix  Dockerfile_parser  Dockerfile_run  Makefile  Pipfile  README.md  alignment.go  confidence_cm.go  go.mod  load_alignments.go  meta.yaml  profile.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
benchmarks/: README.md  entrypoint.py  run_benchmark.sh
cmd/: confidence_only.go
converters/: README.md  alignment_to_stockholm.sh  cm_to_stockholm.py  rm_to_stockholm.py
docs/: about.rst  conf.py  development.rst  examples.rst  index.rst  installation.rst  polyA.rst  running.rst  tutorial.rst
fixtures/: 25p41g_edited.matrix  SubfamPriorCounts.txt  SubfamPriorCounts_jun11.txt  alignment1.align  alignment1.sto  alignment2.align  alignment2.sto  ex1.fa.align.matrix  ex1.fa.align.sto  ex1.fa.cm.sto  ex1.in  ex1.out  ex10.fa  ex10.fa.align.sto  ex10.fa.cm.sto  ex11.fa.align.matrix  ex12.fa.align.matrix  ex12.fa.align.sto  ex15.fa.align.sto  ex16.fa.align.matrix  ex1_hg38_nesting.align.format  ex2.fa.align.sto  ex2.fa.cm.sto  ex2.in  ex2.out  ex2_hg38_nesting.align.format  ex3.fa.align.matrix  ex3.fa.align.sto  ex3.fa.cm.matrix  ex3.fa.cm.sto  ex3.in  ex3.out  ex3_hg38_nesting.align.format  ex4.fa.align.matrix  ex4.fa.align.sto  ex4.fa.cm.sto  ex4.in  ex4.out  ex5.fa  ex5.fa.align.matrix  (+26 more)
legacy/: load_substitution_matrix.pl
parser/: FormatHmmAlignments.sh  cm_to_stockholm.py  hmm_align_to_stockholm.py  hmm_align_to_table.py  hmm_table_to_stockholm.py  rm_to_stockholm.py
polyA/: __init__.py  __main__.py  _app.py  _cli.py  _exceptions.py  _options.py  _runners.py  _version.py  align_score_matrix.py  alignment.py  alignments.py  calc_repeat_scores.py  calculate_chunk_score.py  calculate_repeat_scores.py  calculate_score.py  collapse_matrices.py  conf_score_matrix.py  confidence.py  confidence_cm.py  consensus_position_matrix.py  constants.py  edges.py  exceptions.py  extract_nodes.py  fill_align_matrix.py  fill_confidence_matrix.py  fill_confidence_matrix_tr.py  fill_consensus_position_matrix.py  fill_node_confidence.py  fill_path_graph.py  fill_prob_matrix.py  fill_probability_matrix.py  fill_support_matrix.py  get_path.py  lambda_provider.py  load_alignments.py  load_hmm.py  matrices.py  merge_subfams.py  non_empty_columns.py  (+19 more)
test_inputs/: .gitignore  AdjudicateRegions.pl  AdjudicateRegions.py  AlignmentFormatFromCM.pl  ArtificialSeqs_L1recomb.txt  L1M5_orf2.10.align  LTR90B-L1MDa-L1MA5_852.alignmatrix  LTR90B-L1MDa-L1MA5_852.consensuscollapsematrix  LTR90B-L1MDa-L1MA5_852.supportmatrix  README.md  RunTests.sh  ex3.json  (+52 more)
(+186 files in other folders)
