[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.scripts]
polyA = "polyA.__main__:main"
cm_to_stockholm = "polyA.converters:cm_to_stockholm"

[tool.flit.metadata]
module = "polyA"
author = "Kaitlin Carey"
author-email = "kaitlin1.carey@umontana.edu"
maintainer = "Audrey Shingleton"
maintainer-email = "audrey.shingleton@umontana.edu"
home-page = "https://github.com/TravisWheelerLab/polyA"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
description-file = "README.md"

[tool.flit.sdist]
exclude = [
    "test_inputs/",
    "fixtures/",
    "conda-dist",
    "publications",
    "Dockerfile*",
    "Makefile",
    ".gitignore",
    ".github",
]
